Fix display on Firefox where the attribute input cell was displaying too small, leaving a gap on the right-hand side.

--- a/EU Pollinator (SPRING)/Node CSS Files/node.14.css
+++ b/EU Pollinator (SPRING)/Node CSS Files/node.14.css
@@ -1,5 +1,5 @@
 .scPoMSInsectSpeciesOccurrenceCode {
-	width: 120px !important;
+	width: 150px !important;
 	height: 50px !important;
 }
 .scSex {
